# chaloeil_backend

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  runserver.sh
chaloeil_backend/: manage.py
chaloeil_backend/almanax/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
chaloeil_backend/almanax/fixtures/: ecocraft.json
chaloeil_backend/almanax/migrations/: 0001_initial.py  0002_remove_almanaxentry_date_almanaxentry_day_and_more.py  0003_alter_almanaxentry_bonus.py
chaloeil_backend/chaloeil_backend/: asgi.py  cronjobs.py  settings.py  storage_backends.py  urls.py  views.py  wsgi.py
chaloeil_backend/chaloeil_backend/templates/: index.html
chaloeil_backend/mofus/: admin.py  apps.py  models.py  serializers.py  views.py
chaloeil_backend/mofus/migrations/: 0001_initial.py
chaloeil_backend/question/: admin.py  apps.py  cron.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
chaloeil_backend/question/fixtures/: level.json
chaloeil_backend/question/migrations/: 0001_initial.py  0002_alter_answer_question.py  0003_question_image_url.py  0004_alter_question_question_text.py  0005_level.py  0006_alter_question_level.py  0007_alter_category_category_text_alter_level_level_text_and_more.py  0008_alter_question_question_text.py  0009_answer_emoticon.py  0010_question_suffle_answers.py  0012_questionsoftheday.py  (+13 more)
chaloeil_backend/stats/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
chaloeil_backend/user/: admin.py  models.py  serializers.py  views.py
(+16 files in other folders)
