[project]
name = "chaloeil-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.86",
    "django>=6.0.4",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.11",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "djangorestframework-stubs>=3.16.9",
]
